Fix width jumping in next video widget buttons

--- a/src/themes/_common/player/next.scss
+++ b/src/themes/_common/player/next.scss
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   z-index: 6;
+  .ba-player-next-button-container { width: 100%; }
   a {
     font-size: 16px;
     text-decoration: none;
